// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storage-settings-alarm-form Renders \`storage-settings-alarm-form\` with custom form and history 1`] = `
<div
  class="layout c-information-block column"
>
  <div
    class="layout"
  >
    <div
      class="text-subtitle-1 font-weight-bold"
    >
      Alarm data storage
    </div>
    <c-help-icon-stub
      color="info"
      icon-class="ml-2"
      max-width="300"
      text="When switched on, the resolved alarms data will be archived and/or deleted after the defined time period."
      top=""
    />
  </div>
  <div
    class="layout mt-2"
  >
    <span
      class="text--secondary"
    >
      <storage-settings-history-message-stub
        archivedcountmessagekey="storageSetting.history.alarm.archivedCount"
        deletedcountmessagekey="storageSetting.history.alarm.deletedCount"
        history="[object Object]"
      />
    </span>
  </div>
  <c-enabled-duration-field-stub
    label="Archive resolved alarms data after"
    name="alarm.archive_after"
    value="[object Object]"
  />
  <c-enabled-duration-field-stub
    label="Delete resolved alarms data after"
    name="alarm.delete_after"
    value="[object Object]"
  />
</div>
`;

exports[`storage-settings-alarm-form Renders \`storage-settings-alarm-form\` with default form 1`] = `
<div
  class="layout c-information-block column"
>
  <div
    class="layout"
  >
    <div
      class="text-subtitle-1 font-weight-bold"
    >
      Alarm data storage
    </div>
    <c-help-icon-stub
      color="info"
      icon-class="ml-2"
      max-width="300"
      text="When switched on, the resolved alarms data will be archived and/or deleted after the defined time period."
      top=""
    />
  </div>
  <!---->
  <c-enabled-duration-field-stub
    label="Archive resolved alarms data after"
    name="alarm.archive_after"
    value="[object Object]"
  />
  <c-enabled-duration-field-stub
    label="Delete resolved alarms data after"
    name="alarm.delete_after"
    value="[object Object]"
  />
</div>
`;
